<resources>
    <string name="app_name">PU_Vehicle_APP</string>

    <string name="vehiclenumber">Vehicle Number</string>
    <string name="imagepreview">Image Preview</string>
    <string name="detail">Details Are Below:</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="hindi">हिंदी</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="email">email</string>
    <string name="call">CAll</string>
    <string name="entername">Enter The Name Here</string>
    <string name="phnumber1">Enter Phone Number 1</string>
    <string name="phnumber2">Enter Phone Number 2</string>
    <string name="emailenter">Enter The Email</string>
    <string name="locationenter">Enter The Location</string>
    <string name="SUBMIT">SUBMIT</string>


    <array name="city">


        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>

        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amravati</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>

        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>

        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>

        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Goa</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>

        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>

        <item>Kovalam</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>

        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>


        <item>Mangalore</item>

        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>

        <item>Nandi Hills</item>

        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>

        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>

        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>

        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>

        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vadodara</item>
        <item>Vaishali</item>

        <item>Varanasi</item>

        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>

        <item>Yercaud</item>
        <item>Zanskar</item>
    </array>
</resources>