<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/colorTransparentsWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll">
        <Space
            android:layout_width="5dp"
            android:layout_height="0dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="english"
            android:layout_weight="1"
            android:onClick="onClick"
            android:id="@+id/engbtn"/>
        <Space
            android:layout_width="5dp"
            android:layout_height="0dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:onClick="onClick"
            android:layout_weight="1"
             android:id="@+id/hinbtn"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gujarati"
            android:layout_weight="1"
            android:onClick="onClick"
            android:id="@+id/gujbtn"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/vehiclenumber"
                            android:textAllCaps="true"
                            android:textColor="#1F51FF"
                            android:textSize="24sp"
                            android:textStyle="bold"></TextView>




                    </LinearLayout>

                    <EditText
                        android:id="@+id/resultET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:autoLink="all"
                        android:background="@null"
                        android:padding="5dp"
                        android:textColor="#1F51FF" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/imagepreview"
                        android:textAllCaps="true"
                        android:textColor="#1F51FF"
                        android:textSize="24sp"
                        android:textStyle="bold"></TextView>

                    <ImageView
                        android:id="@+id/imageV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="250dp"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:text="@string/search"></Button>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/detail"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#262626"
                android:textSize="26dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="23dp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="Ph 1 :"
                    android:textColor="@color/grey"
                    android:textSize="23dp"
                    />
                <TextView
                    android:id="@+id/phone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:textColor="@color/grey"
                    android:textSize="23dp"
                    />

                <Button
                    android:id="@+id/callOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:text="@string/call"></Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="Ph 2 :"
                    android:textColor="@color/grey"
                    android:textSize="23dp"
                    />
                <TextView
                    android:id="@+id/phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:textColor="@color/grey"
                    android:textSize="23dp"
                    />

                <Button
                    android:id="@+id/callTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_baseline_call_24"
                    android:text="@string/call"></Button>

            </LinearLayout>


            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="23dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/location"
                android:textColor="@color/grey"
                android:textSize="23dp"
                android:textAlignment="center"
                />


            <Space
                android:layout_width="match_parent"
                android:layout_height="280dp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>